--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        <p>hello this is sownya</p>
-        <p>hiii world</p>
-    </body>
+<body>
+<h2>JavaScript Prompt</h2>
+<button onclick="myFunction()">Try it</button>
+<p id="demo"></p>
+<script>
+function myFunction() {
+let text;
+let person = prompt("Please enter your name:", "Prince");
+if (person == null || person == "") {
+text = "User cancelled the prompt.";
+} else {text = " Kishore" + person + "! Happiest Birthday my dear";
+}
+document.getElementById("demo").innerHTML = text;
+}
+</script>
+</body>
 </html>
